# LogTool

./: CConnectionForSshClient.cpp  CConnectionForSshClient.h  CMakeLists.txt  CMakeLists.txt.user.cb1159c  CMakeLists.txt.user.fc01488  Makefile  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
LogTool_autogen/EWIEGA46WW/: moc_mainwindow.cpp
LogTool_autogen/include/: ui_mainwindow.h
qssh/: .gitignore  CMakeLists.txt  qssh.pro
qssh/examples_bin/: errorhandling  remoteprocess  sftp  shell  tunnel
qssh/lib/: libQSsh.so.1.0.0
qssh/src/: src.pro
